--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
@@ -15,9 +15,9 @@
         </script>
     <![endif]-->
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
-
+    
+    <script type="text/javascript" src="js/jQueryui.js"></script>
+    <script type="text/javascript" src="js/jQuery.js"></script>
     <script type="text/javascript" src="js/scrolloverflow.js"></script>
 
     <script type="text/javascript" src="js/jquery.fullPage.js"></script>
